# pickomino

./: Cargo.toml  IDEA.md
src/: constant.rs  dice.rs  domino.rs  game_state.rs  gamestate.rs  lib.rs  main.rs  main_old.rs  player.rs  shell.rs  state_machine.rs
src/client/: client.rs
src/domain/: application.rs  dice.rs  game_state.rs  game_state_repository.rs  mod.rs  player.rs
src/infrastructure/: game_state_repository_file_system.rs  main_menu.rs  mod.rs  parser.rs
src/server/: actions.rs  dice.rs  domino.rs  error.rs  game_state.rs  mod.rs  player.rs  server.rs
