[package]
edition = "2021"
name = "pickomino"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
strum = "0.24"
strum_macros = "0.24"
